--- a/listicle.html
+++ b/listicle.html
@@ -8,24 +8,70 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="css/listicle-style.css"/>
   </head>
+
   <body>
+    <header>
+    <h2>Stanford: 4 on-campus beverages you should be drinking</h2>
+    </header>
 
-  <!-- TODO(you): Write the HTML necessary to complete HW1! -->
+    <div class="profile">
+      <p>
+        <img src ="images/vrk.png">
+        <br/><strong>Victoria Kirst</strong><br/>
+        <em>Last updated Apr 7, 2017</em>
+      </p>
+    </div>
 
-  <!--
+    <section>
+      <span>1.</span>
+      <div>
+        <h1>Italian soda at Bytes</h1>
+        <a href="https://goo.gl/maps/EjneHBEPksw">350 Serra Mall, Stanford, CA</a>
+        <p>
+        When's the last time you've had an Italian soda? It had been a while for me, but I wanted to join my friend for a non-caffeinated beverage at Bytes and I became reaquainted with the combination of fizzy water and artificial fruit syrup. Italian sodas are not so sweet as a normal soda and not so boring as a flavored carbonated water. The Italian sodas at Bytes also have no cream in them (or maybe they do if you ask; I haven't tried), which makes it a nice coffee shop alternative for the times when you're feeling a refreshing drink that doesn't have caffeine or milk.</p>
+        <p><strong>Recommendation:</strong> Raspberry Italian soda</p>
+        <img src="images/italian-soda.jpg">
+      </div>
+    </section>
 
-    ******************************************
-    DO NOT TRANSCRIBE THE ARTICLE YOURSELF!!!!
-    ******************************************
+    <section>
+      <span>2.</span>
+      <div>
+        <h1>Bubble tea at Pop Tea Bar</h1>
+        <a href="https://goo.gl/maps/3jHRC2umZCy">456 Cambridge Ave, Palo Alto, CA</a>
+        <p>
+          When your boba craving strikes, head over to Pop Tea Bar, a cute little bubble tea shop on Cambridge Avenue. The menu is your standard bubble tea fare with nothing too adventurous on the menu -- no bubble tea floats, for example -- but the tapioca is fresh, the service is fast, and the tea is smooth and delicious! They have little bites to eat too, like popcorn chicken and eggrolls, in perfect snack-size portions. There's not too much seating, but there's a cute outdoor area in the back for warmer days.
+        </p>
+        <p><strong>Recommendation:</strong> Classic Milk Tea with tapioca + an order of popcorn chicken.</p>
+        <img src="images/boba.jpg">
+      </div>
+    </section>
 
-    You do not have to type in all of the text on the page!
+    <section>
+      <span>3.</span>
+      <div>
+        <h1>Latte at CoHo</h1>
+        <a href="https://goo.gl/maps/jaov5FhK5852">459 Lagunita Dr, Stanford, CA</a>
+        <p>
+          I can't tell you whether CoHo has a particularly amazing Vanilla Bean Latte, only because CoHo is the only place I've ever ordered a Vanilla Bean Latte from. I'm not even totally sure I know what a Vanilla Bean Latte is supposed to taste like. What I do know is the Vanilla Bean Latte I ordered on a whim from CoHo was delicious.
+        </p>
+        <p><strong>Recommendation:</strong> Vanilla Bean Latte</p>
+        <img src="images/coho-coffee.jpg">
+      </div>
+    </section>
 
-    The contents of the article is in `listicle-content.txt`, which is
-    included in this directory. Copy and paste the contents of that file into
-    this HTML file as needed. You should only need to add HTML to markup the
-    content.
-
-  -->
+    <section>
+      <span>4.</span>
+      <div>
+        <h1>Agua Fresca at Nexus Cafe</h1>
+        <a href="https://goo.gl/maps/WzJZx183auA2">318 Campus Drive, Stanford, CA</a>
+        <p>
+          Nexus Cafe has a lot of tasty things packed into its cafeteria space, including agua fresca! Grab a cup of this fresh and fruity beverage before you head to the check out line. Nexus Cafe has plenty of indoor and outdoor seating, too, so on the next sunny day, take a break on the patio with a cup of agua fresca, and maybe a burrito.
+        </p>
+        <p><strong>Recommendation:</strong> Agua Fresca</p>
+        <img src="images/nexus-cafe.jpg">
+      </div>
+    </section>
 
   </body>
 </html>
